[package]
name = "rustpiboot"
description = "Port of the raspberry pi usbboot code to rust"
version = "0.2.0"
authors = ["Mathias Koch <mk@blackbird.online>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MathiasKoch/rustpiboot"
readme = "README.md"
keywords = ["raspberrypi", "boot"]

[dependencies]
rusb = "0.6.5"
dd-lib = "0.2.1"
log = "^0.4"
